--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -31,7 +31,11 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/login">Login</a></li>
+                {% if user is not empty %}
+                    <li><a href="/logout">Logout</a></li>
+                {% else %}
+                    <li><a href="/login">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
