--- a/views/login.twig
+++ b/views/login.twig
@@ -3,6 +3,11 @@
 {% block content %}
     <div class="container">
         <div class="col-md-4">
+
+            {% if error is not empty %}
+                <div class="alert alert-danger">{{ error }}</div>
+            {% endif %}
+
             <form action="/login" method="post">
                 <div class="form-group">
                     <label class="control-label">Email</label>
