load user entity

--- a/views/home.twig
+++ b/views/home.twig
@@ -10,4 +10,10 @@
         {% endif %}
     </h1>
 </div>
+
+
+{% if entity is not empty %}
+    <pre>{{ entity }}</pre>
+{% endif %}
+
 {% endblock %}
