--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -26,15 +26,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Skeleton</a>
+            <a class="navbar-brand" href="{{ route("home") }}">Skeleton</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 {% if user is not empty %}
-                    <li><a href="/logout">Logout</a></li>
+                    <li><a href="{{ route("logout") }}">Logout</a></li>
                 {% else %}
-                    <li><a href="/login">Login</a></li>
+                    <li><a href="{{ route("login") }}">Login</a></li>
                 {% endif %}
             </ul>
         </div>
