--- a/views/login.twig
+++ b/views/login.twig
@@ -8,7 +8,7 @@
                 <div class="alert alert-danger">{{ error }}</div>
             {% endif %}
 
-            <form action="/login" method="post">
+            <form action="{{ route("login") }}" method="post">
                 <div class="form-group">
                     <label class="control-label">Email</label>
                     <input type="text" name="email" class="form-control" />
