--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -31,7 +31,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                {% if user is not empty %}
+                {% if isLoggedIn() %}
                     <li><a href="{{ route("logout") }}">Logout</a></li>
                 {% else %}
                     <li><a href="{{ route("login") }}">Login</a></li>
