--- a/views/error.twig
+++ b/views/error.twig
@@ -1,5 +1,5 @@
 {% extends "layout/default.twig" %}
 
 {% block content %}
-    <div class="alert alert-danger">Whoops...</div>
+    <div class="alert alert-danger">Whoops... {{ error }}</div>
 {% endblock %}
