--- a/views/layout/default.twig
+++ b/views/layout/default.twig
@@ -35,6 +35,7 @@
                     <li><a href="{{ route("logout") }}">Logout</a></li>
                 {% else %}
                     <li><a href="{{ route("login") }}">Login</a></li>
+                    <li><a href="{{ route("register") }}">Register</a></li>
                 {% endif %}
             </ul>
         </div>
