--- a/views/error.twig
+++ b/views/error.twig
@@ -2,4 +2,10 @@
 
 {% block content %}
     <div class="alert alert-danger">Whoops... {{ error }}</div>
+
+    {% if showException and exception %}
+        <div>{{ exception.getMessage }}</div>
+        <pre>{{ exception.getTraceAsString }}</pre>
+    {% endif %}
+
 {% endblock %}
